"""This is the trundle module."""
module(
    name = "trundle",
    version = "0.1"
)

bazel_dep(name = "cpp-httplib", version = "0.7.15")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "argparse", version = "3.0.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)